#39 Added mobile trail preview, fixed some mobile layout problems

--- a/src/app/map-view/map-full/map-full.component.scss
+++ b/src/app/map-view/map-full/map-full.component.scss
@@ -23,22 +23,22 @@
 
 #municipality-btn {
   position: absolute;
-  left: 1%;
-  bottom: 1%;
+  right: 1%;
+  top: 50px;
 }
 
 #localize-me-btn {
   color: black;
   position: absolute;
-  left: 1%;
-  bottom: 65px;
+  right: 1%;
+  top: 110px;
 }
 
 #terrain-btn {
   color: black;
   position: absolute;
-  left: 1%;
-  bottom: 120px;
+  right: 1%;
+  top: 170px;
 }
 
 #hint-space {
